commit messag added project

--- a/attorneys.html
+++ b/attorneys.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
-    <meta charset="UTF-8">
+        <meta charset="UTF-8">
     <link rel="icon" type="image" href="favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Main Page</title>
-    <link rel="stylesheet" href="murdstyle.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Attorneys</title>
+        <link rel="stylesheet" href="normalize.css">
+        <link rel="stylesheet" href="murdstyle.css">
 </head>
 <body>
 <div class="container">
     <nav>
         <h2>Company Logo</h2>
         <ul id="navi">
-            <li><a href="murdindex.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="attorneys.html">Attorneys</a></li>
             <li><a href="resources.html">Resources</a></li>
             <li><a href="contact.html">Contact Us</a></li>
@@ -22,29 +22,24 @@
     </nav>
     <header>
         <div><img src="anothertrypic.png" alt="office"></div>
-        <div><h2>The Saint Paul Law Office</h2>
-            <p>Just blocks north of Saint Paul;s Como Park & Zoo, the St. Paul Law Office is a collection of law firms.</p>
-            <p>
-                The office is centrally located between downtown Minneapolis and downtown Saint Paul, with free off-street parking available. The firm handles a wide variety of legal issues to meet your needs.  Please visit our profile page to learn more about the areas of practice.
+        <div><h2>The Saint Paul Law Offices</h2></div>
+    </header>
+    <section id="attrnys">
+    <h2>Ruvelson & Kautzer, LTD</h2>
+        <h6>(formerly Ruvelson & Kautzer, chartered)</h6>
+        <div id="ed">
+            <img src="ed.jpeg" alt="picture of Ed Kautzer">
+            <h3>Edward F Kautzer</h3>
+            <p>President of Ruvelson & Kautzer, Ltd. attorneys in Roseville, Minnesota</p>
+            <p>Since 1979, Ed Kautzer has defended hundreds of lawyers, judges, doctors, nurses, and other licensed professionals in ethics matters before their respective boards. Ed is a partner in the law firm of Ruvelson & Kautzer,Ltd and he is a member of both the Minnesota and Wisconsin State Bars. He has written numerous articles in the areas of family law, ethics and malpractice and is a frequent lecturer for continuing legal education in these areas.
             </p>
         </div>
-    </header>
-    <hr>
-    <main>
-        <div>
-            <h3>Product 1</h3>
-            <p>This is a nice description of something I know not what.This is a nice description of something I know not what. This is a nice description of something I know not what. This is a nice description of something I know not what</p>.
+        <div id="other">
+            <h3>Alan Keith Ruvelson, Jr., retired</h3>
+            <p>President of Ruvelson & Kautzer, chartered, 1975 - 2010.</p>
+            <p>Practice areas: Business, real estate, probate</p>
         </div>
-        <div>
-            <h3>Product 2</h3>
-            <p>This is a second description of something I know not what.</p>
-        </div>
-        <div>
-            <h3>Product 3</h3>
-            <p>This is a third description of something I know not what.</p>
-        </div>
-    </main>
-
+    </section>
     <footer>
         <div>
             <nav>
